Write Clustering Info to JSON Report Object